# panels

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.md
include/panels/: clockAnimation.h  demoAnimation.h  meteoAnimation.h  panels.h
libs/matrix-ui/include/matrix-ui/: CanvasHolder.h  Component.h  Layout.h  Line.h  Panel.h  RootPanel.h  TemperatureLine.h  Text.h  TextLine.h
libs/matrix-ui/include/matrix-ui/animation/: AnimatedComponent.h  AnimationComponent.h  AnimationThread.h  CanvasAdapter.h  LocalTime.h
libs/matrix-ui/include/matrix-ui/animation/basic/: ScrollingText.h
libs/matrix-ui/include/matrix-ui/animation/event/: AnimationEvent.h
libs/matrix-ui/include/matrix-ui/animation/transformer/: FocusedStretchingTransformer.h  HorizontalStretchingTransformer.h  PixelTransformer.h  RotationTransformer.h  TranslationTransformer.h  TranslatonTransformer.h  VerticalStretchingTransformer.h
libs/matrix-ui/include/matrix-ui/animation/transformer/adv/: AnimationEndListener.h  PanelSlider.h
libs/matrix-ui/include/matrix-ui/animation/transformer/base/: ColorTransformer.h  HorizontalStretchingTransformer.h  RotationTransformer.h  VerticalStretchingTransformer.h
libs/matrix-ui/include/matrix-ui/dp/: Notifier.h  Observee.h  Observer.h
libs/matrix-ui/include/matrix-ui/samples/: TemperatureLine.h
libs/matrix-ui/include/matrix-ui/shape/: Circle.h  Dot.h  Line.h  Rectangle.h  Text.h  TextLine.h
libs/matrix-ui/src/: Component.cpp  Layout.cpp  Line.cpp  Panel.cpp  RootPanel.cpp  TemperatureLine.cpp  Text.cpp  TextLine.cpp
libs/matrix-ui/src/animation/: AnimatedComponent.cpp
libs/matrix-ui/src/animation/basic/: ScrollingText.cpp
libs/matrix-ui/src/dp/: Observee.cpp
libs/matrix-ui/src/samples/: TemperatureLine.cpp
libs/matrix-ui/src/shape/: Circle.cpp  Dot.cpp  Line.cpp  Rectangle.cpp  Text.cpp  TextLine.cpp
scripts/: resetmatrix.py
src/: panels.cpp
